@@ -79,7 +79,8 @@ DrawOscilloscope (void)
 	assert ((size_t)scopeSize.width <= sizeof scope_data);
 	assert (scopeSize.height < 256);
 
-	if (GraphForegroundStream (scope_data, scopeSize.width, scopeSize.height))
+	if (GraphForegroundStream (scope_data, scopeSize.width, scopeSize.height,
+			usingSpeech))
 	{
 		int i;
 		CONTEXT oldContext;
