@@ -72,6 +72,8 @@ QUEUE disp_q;
 uio_Repository *repository;
 uio_DirHandle *rootDir;
 
+BOOLEAN usingSpeech;
+
 
 static void
 InitPlayerInput (void)
@@ -119,9 +121,11 @@ LoadKernel (int argc, char *argv[])
 		loadAddon ("3domusic");
 	}
 
-	/* Always try to use voice data */
-	if (!loadAddon ("3dovoice"))
-		speechVolumeScale = 0.0f; // XXX: need better no-speech indicator
+	usingSpeech = optSpeech;
+	if (optSpeech && !loadAddon ("3dovoice"))
+	{
+		usingSpeech = FALSE;
+	}
 
 	if (optRemixMusic)
 	{
